# stow-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.dependabot/: config.yml
src/: main.rs
